--- a/BSA_Hackathon/package.json
+++ b/BSA_Hackathon/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@hashgraph/hashconnect": "^1.24.0",
     "@hashgraph/sdk": "^2.60.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -45,7 +46,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "simple-crypto-js": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
