--- a/BSA_Hackathon/package.json
+++ b/BSA_Hackathon/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "sass": "^1.85.1",
     "simple-crypto-js": "^3.0.1"
   },
   "devDependencies": {
